--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -3805,6 +3805,7 @@
    "source": [
     "loaded_model = joblib.load(filename)\n",
     "result = loaded_model.score(a_test, b_test)\n",
+    "print(result)\n",
     "print(result)"
    ]
   },
